# hcp_crm

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tokens.css
frontend/src/: App.tsx  index.css  store.ts
frontend/src/features/chat/: chatSlice.ts
frontend/src/features/interaction/: interactionSlice.ts
frontend/src/lib/: api.ts  draft.ts
frontend/tests/: draft.test.ts
server/: Dockerfile  README.md  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 26583c7eb892_add_material_topic_tags.py  a209b65bd9b5_add_interaction_follow_up_actions.py  bf112bd8988f_create_hcp_crm_tables.py
server/app/: api.py  config.py  database.py  graph.py  models.py  schemas.py  seed.py  services.py
server/tests/: test_hcp_lookup.py
