[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
